<resources>
    <string name="app_name">TestApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="default_image">https://www.w3schools.com/w3images/fjords.jpg</string>
    <string name="download_image_hint">Input URL to download image</string>
    <string name="download_button">Download</string>
    <string name="downloaded_picture_hint">Downloaded picture</string>
    <string name="something_went_wrong_try_again">Something went wrong, try again.</string>
</resources>
